fix(CSS): Moves an overflow that was added to known overflowing components.
Added because of an issue with the Reveal component. This caused further issues, so the overflow handling has been moved to Reveal component, where it's needed.

--- a/src/components/grid/Grid.css
+++ b/src/components/grid/Grid.css
@@ -8,10 +8,6 @@
   --cmp-grid-gutter-size-large: calc(var(--spacing-grid-size) * 8);
 }
 
-.ax-grid__container {
-  overflow: hidden;
-}
-
 .ax-grid {
   display: flex;
 }
