--- a/src/components/layout/InlineGroup.css
+++ b/src/components/layout/InlineGroup.css
@@ -4,10 +4,6 @@
   --cmp-inline-spacing: calc(var(--spacing-grid-size) * 2);
 }
 
-.ax-inline-group {
-  overflow: hidden;
-}
-
 .ax-inline-group__spacer {
   margin-bottom: calc(var(--cmp-inline-spacing) * -1);
 
